--- a/Purchasing.Mvc/Views/Report/ProcessingTimeSummary.cshtml
+++ b/Purchasing.Mvc/Views/Report/ProcessingTimeSummary.cshtml
@@ -224,8 +224,7 @@
                             @Html.LabelFor(model => model.StartDate)
                         </div>
                         <div class="editor-field">
-
-                            @Html.TextBoxFor(model => model.StartDate, new Dictionary<string, object> { { "data-val", false }, { "class", "datepicker" } })
+                            @Html.TextBoxFor(model => model.StartDate, new Dictionary<string, object> { { "data-val", false }, { "class", "datepicker" }, { "Value", Model.StartDate.Value.ToShortDateString() } })
                         </div>
                     </li>
                     <li class="datepicker">
@@ -233,8 +232,7 @@
                             @Html.LabelFor(model => model.EndDate)
                         </div>
                         <div class="editor-field">
-
-                            @Html.TextBoxFor(model => model.EndDate, new Dictionary<string, object> { { "data-val", false }, { "class", "datepicker" } })
+                            @Html.TextBoxFor(model => model.EndDate, new Dictionary<string, object> { { "data-val", false }, { "class", "datepicker" }, { "Value", Model.EndDate.Value.ToShortDateString() } })
                         </div>
                     </li>
                     <li>
