Add new report to index page. That's novel.

--- a/Purchasing.Mvc/Views/Report/Index.cshtml
+++ b/Purchasing.Mvc/Views/Report/Index.cshtml
@@ -102,6 +102,7 @@
             @ContainerFor("Purchaser Daily Workload", "PurchaserWorkLoad")
             @ContainerFor("Purchaser Processing Time By Workgroup", "ProcessingTime")
             @ContainerFor("Processing Time By Workgroup", "ProcessingTimeSummary")
+            @ContainerFor("Processing Time By Role", "ProcessingTimeByRole")
             @ContainerFor("Permissions", "Permissions")
             <div style="clear: both;"></div>
 
