--- a/Purchasing.Mvc/Views/Shared/EditorTemplates/User.cshtml
+++ b/Purchasing.Mvc/Views/Shared/EditorTemplates/User.cshtml
@@ -40,4 +40,12 @@
         @Html.EditorFor(model => model.IsActive) @Html.ValidationMessageFor(model => model.IsActive)
     </div>
 </li>
+<li>
+    <div class="editor-label">
+        @Html.LabelFor(model => model.IsSscAdmin)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.IsSscAdmin) @Html.ValidationMessageFor(model => model.IsSscAdmin)
+    </div>
+</li>
 
