Warning text. Because I guess we need it...

--- a/Purchasing.Mvc/Views/Order/_ReviewAttachments.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewAttachments.cshtml
@@ -9,6 +9,10 @@
             <p>Please receive or pay for all items before uploading an order invoice.</p>
         </div>
     }
+    <div class="section-text">
+        <p><strong style="color: red">Note:</strong> Do not attach documents with private information like Social Security Numbers</p>
+    </div>
+
        <div class="section-contents">
 
         @if (!Model.Attachments.Any())
