--- a/Purchasing.Mvc/Views/Order/_OrderPreferences.cshtml
+++ b/Purchasing.Mvc/Views/Order/_OrderPreferences.cshtml
@@ -9,6 +9,7 @@
             <p>
                 Please specify additional preferences for this order. You can also add a comment and upload files if desired.
             </p>
+                <p><strong style="color: red">Note:</strong> Do not attach documents with private information like Social Security Numbers</p>
             <p><strong id="shipping-warning" class="field-validation-error"></strong></p>
         </div>
 
