--- a/Purchasing.Mvc/Views/Report/ProcessingTimeByRole.cshtml
+++ b/Purchasing.Mvc/Views/Report/ProcessingTimeByRole.cshtml
@@ -34,7 +34,7 @@
             xAxis: {
                 categories: names,
                 title: {
-                    text: 'User:<br/><span style="color: red">Overall mean: ' +  @String.Format("{0:F2}", Model.Columns.AverageTimeToRoleComplete) +'</span>',
+                    text: 'User (n=#orders)<br/><span style="color: red">Overall mean: ' +  @String.Format("{0:F2}", Model.Columns.AverageTimeToRoleComplete) +'</span>',
                    
                 }
             },
