Sigh, I really shouldn't have to do this...

--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Create.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Create.cshtml
@@ -36,7 +36,7 @@
         <ul>
             <li>
                 <div>
-                    <strong>@Html.ActionLink("Instructions", "Instructions", null, new{target="_blank"})</strong>
+                    <strong>@Html.ActionLink("Instructions (Click This Link)", "Instructions", null, new{target="_blank"})</strong> 
                 </div>
             </li>
         </ul>        
