Buttonize the Edit Line Items And Accounts link.

--- a/Purchasing.Mvc/Views/Order/_ItemModificationTemplate.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ItemModificationTemplate.cshtml
@@ -20,7 +20,7 @@
 						
 					</div>
 					<div class="editor-field">
-						<a href="#" class="button" id="item-modification-button">Edit Line Items and Accounts</a>
+                        <a href="#" class="button ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" id="item-modification-button" style="padding: 4px 11px; border-width: 0px;">Edit Line Items and Accounts</a>
 					</div>
 				</li>
 			</ul>
