Typo (I'm blaming James)

--- a/Purchasing.Mvc/Views/Report/Index.cshtml
+++ b/Purchasing.Mvc/Views/Report/Index.cshtml
@@ -98,7 +98,7 @@
 
         <header class="ui-corner-top ui-widget-header">Reports</header>
         <div class="section-contents">
-            @ContainerFor("Workload y Workgroup", "Workload")
+            @ContainerFor("Workload Report By Workgroup", "Workload")
             @ContainerFor("Purchaser Daily Workload", "PurchaserWorkLoad")
             @ContainerFor("Purchaser Processing Time By Workgroup", "ProcessingTime")
             @ContainerFor("Processing Time By Workgroup", "ProcessingTimeSummary")
