--- a/Purchasing.Mvc/Views/Order/_ReviewApprovals.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewApprovals.cshtml
@@ -24,7 +24,7 @@
                                 }
                                 else
                                 {
-                                    <a class="showTip ui-icon ui-icon-info" href="http://ucdavis.edu/search/directory_results.shtml?filter=@approval.User.Email" target="_blank" title='Opens a new window to the campus directory performing a search for this person.'></a>
+                                    <a class="showTip ui-icon ui-icon-info" href="http://directory.ucdavis.edu/search/directory_results.shtml?filter=@approval.User.Email" target="_blank" title='Opens a new window to the campus directory performing a search for this person.'></a>
                                 }
                             </td>
                             <td>@(approval.Completed ? "Approved" : "Pending")</td>
