--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Approve.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Approve.cshtml
@@ -77,7 +77,7 @@
                         <div class="display-details">
                                      
                             @{
-                                var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                                var url = string.Format("http://directory.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
                                 var emailString = string.Format("mailto:{0}", email.Value);
                             }
                             <a class="button" href="@url" target="_blank">Lookup</a>
@@ -115,7 +115,7 @@
                         <div class="display-details">
                                      
                             @{
-                    var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                    var url = string.Format("http://directory.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
                     var emailString = string.Format("mailto:{0}", email.Value);
                             }
                             <a class="button" href="@url" target="_blank">Lookup</a>
@@ -152,7 +152,7 @@
                         <div class="display-details">
                                      
                             @{
-                    var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                    var url = string.Format("http://directory.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
                     var emailString = string.Format("mailto:{0}", email.Value);
                             }
                             <a class="button" href="@url" target="_blank">Lookup</a>
