--- a/Purchasing.Mvc/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Web.Configuration
+﻿@using System.Configuration
+@using System.Web.Configuration
 @using Purchasing.Core.Domain
 <!DOCTYPE html>
 <html lang="en" class="no-js">
@@ -249,6 +250,7 @@
         d.LoadTableTools = @(ViewBag.LoadTableTools == null ? "false" : ViewBag.LoadTableTools.ToString().ToLower());
         d.TableToolsSwf = '@Url.Content("~/Content/DataTables-1.9.0/extras/TableTools/media/swf/copy_cvs_xls.swf")';
         d.LoadFixedHeaders = @(ViewBag.LoadFixedHeaders == null ? "false" : ViewBag.LoadFixedHeaders.ToString().ToLower());
+        d.PersonLookup = '@ConfigurationManager.AppSettings["PersonLookupUrl"]';
     }(window));
     </script>
     
