--- a/Purchasing.Mvc/Views/Home/Index.cshtml
+++ b/Purchasing.Mvc/Views/Home/Index.cshtml
@@ -240,7 +240,7 @@
 
                 <ul id="authorinfo">
                     <li>Developed By <a href="@Url.Content("~/humans.txt")" target="_blank">A Team Of Programmers Across UC Davis</a></li>
-                    <li>Copyright The Regents of the University of California, Davis campus, 2005-15.</li>
+                    <li>Copyright The Regents of the University of California, Davis campus, 2005-@(DateTime.UtcNow.Date.ToString("yy")).</li>
                     <li>All Rights Reserved.</li>
                 </ul>
             </div>
