--- a/Purchasing.Mvc/Views/Wizard/AddPeople.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/AddPeople.cshtml
@@ -14,7 +14,7 @@
         
             var userUrl = "@Url.Action("SearchUsers")";
             
-            $("#users").multiSelector({autoComplete: false, dataUrl: userUrl, placeholder: "Email, Kerb or Name", showOptions: true});
+            $("#users").multiSelector({autoComplete: false, dataUrl: userUrl, placeholder: "Email or Kerb", showOptions: true});
            
         })
 
