rename the bundle too

--- a/Purchasing.Mvc/Views/Order/PayInvoice.cshtml
+++ b/Purchasing.Mvc/Views/Order/PayInvoice.cshtml
@@ -23,7 +23,7 @@
 
 @section AdditionalScripts
 {
-    @Scripts.Render("~/bundles/jquery.tmpl")
+    @Scripts.Render("~/bundles/jqueryTmpl")
     @Scripts.Render("~/bundles/fileuploader.js")
     @Scripts.Render("~/bundles/single/payInvoice")
 
