--- a/Purchasing.Mvc/Views/Order/ReceiveItems.cshtml
+++ b/Purchasing.Mvc/Views/Order/ReceiveItems.cshtml
@@ -26,7 +26,7 @@
 
 @section AdditionalScripts
 {
-    @Scripts.Render("~/bundles/jquery.tmpl")
+    @Scripts.Render("~/bundles/jqueryTmpl")
     @Scripts.Render("~/bundles/fileuploader.js")
    @Scripts.Render("~/bundles/single/receiveItems")
 
