Bundle name for js files
qTip

--- a/Purchasing.Mvc/Views/Workgroup/Edit.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/Edit.cshtml
@@ -33,7 +33,7 @@
 {
     @Scripts.Render("~/bundles/multiselector")
     @Scripts.Render("~/bundles/single/chosen")
-    @Scripts.Render("~/bundles/jquery.qtip")
+    @Scripts.Render("~/bundles/jquery-qtip")
 
     
 	<script type="text/javascript">
