--- a/Purchasing.Mvc/Views/Workgroup/UpdateMultipleAccounts.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/UpdateMultipleAccounts.cshtml
@@ -14,7 +14,7 @@
 }
 
 @{
-    @Scripts.Render("~/bundles/jquery.qtip")
+    @Scripts.Render("~/bundles/jquery-qtip")
     <script type="text/javascript">
         $(document).ready(function () {
             $(".showTip").qtip({
