file up loader bundle

--- a/Purchasing.Mvc/Views/Order/PayInvoice.cshtml
+++ b/Purchasing.Mvc/Views/Order/PayInvoice.cshtml
@@ -24,7 +24,7 @@
 @section AdditionalScripts
 {
     @Scripts.Render("~/bundles/jqueryTmpl")
-    @Scripts.Render("~/bundles/fileuploader.js")
+    @Scripts.Render("~/bundles/fileuploader-js")
     @Scripts.Render("~/bundles/single/payInvoice")
 
     <script type="text/javascript">
