--- a/Purchasing.Mvc/Views/Order/ReceiveItems.cshtml
+++ b/Purchasing.Mvc/Views/Order/ReceiveItems.cshtml
@@ -27,7 +27,7 @@
 @section AdditionalScripts
 {
     @Scripts.Render("~/bundles/jqueryTmpl")
-    @Scripts.Render("~/bundles/fileuploader.js")
+    @Scripts.Render("~/bundles/fileuploader-js")
    @Scripts.Render("~/bundles/single/receiveItems")
 
 <script type="text/javascript">
