Update help text to reflect the realities of this report

--- a/Purchasing.Mvc/Views/Report/ProcessingTimeSummary.cshtml
+++ b/Purchasing.Mvc/Views/Report/ProcessingTimeSummary.cshtml
@@ -211,7 +211,7 @@
 <div class="">
     <div class="dt-table-filter-header display-form">
         <div class="section-text">
-            <p> Workgroups with (Admin) after them will get all orders in child workgroups. </p>
+            <p> Workgroups with (Admin) after them will not have any orders associated with them. </p>
             <p> Only completed orders that were created in the month selected will be displayed. </p>
             <p> If there were multiple ReRoutes, only the last one will be used. </p>
         </div>
