--- a/Purchasing.Mvc/Views/Report/ProcessingTimeByRole.cshtml
+++ b/Purchasing.Mvc/Views/Report/ProcessingTimeByRole.cshtml
@@ -9,9 +9,9 @@
 
 <h2>ProcessingTimeByRole</h2>
 
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/highcharts-more.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/5/highcharts.js"></script>
+<script src="https://code.highcharts.com/5/highcharts-more.js"></script>
+<script src="https://code.highcharts.com/5/modules/exporting.js"></script>
 
 <div id="container" style="height: 400px; margin: auto; min-width: 310px; max-width: 600px"></div>
 
