--- a/Purchasing.Mvc/Views/Report/ProcessingTimeSummary.cshtml
+++ b/Purchasing.Mvc/Views/Report/ProcessingTimeSummary.cshtml
@@ -20,9 +20,9 @@
 
 
 @*<script src="https://code.highcharts.com/4.1/highcharts.js"></script>*@
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/heatmap.js"></script>
-<script src="https://code.highcharts.com/modules/treemap.js"></script>
+<script src="https://code.highcharts.com/5/highcharts.js"></script>
+<script src="https://code.highcharts.com/5/modules/heatmap.js"></script>
+<script src="https://code.highcharts.com/5/modules/treemap.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
 
 
