--- a/Purchasing.Mvc/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_Layout.cshtml
@@ -222,7 +222,7 @@
                     @*<span class="navigation-list">Orders</span>
                     <span class="navigation-list">Administration</span>*@
 					
-                    <span class="navigation-list"><a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues" target="_blank">Help</a></span>
+                    <span class="navigation-list"><a href="https://secure.caes.ucdavis.edu/help/Ticket/Submit?appName=opp?appName=opp" target="_blank">Help</a></span>
 
 				</nav>
 				<div class="col2-50">
