--- a/Purchasing.Mvc/Css/Site.css
+++ b/Purchasing.Mvc/Css/Site.css
@@ -127,6 +127,8 @@ menu, nav {text-align: right;}
 /* ---------------- */    
 .col1-50, .col2-50, .col-50-left { width: 49%; display: inline-block; vertical-align:top;}
 .col2-50 {text-align: right;}
+.col1-75, .col2-75, .col-75-left { width: 72%; display: inline-block; vertical-align:top;}
+.col2-75 {text-align: right;}
 .col1-33, .col2-33, .col3-33 { width: 32.5%; display: inline-block; float: left; }
 .col1-33, .col2-33 { margin-right: 10px; }
 .col2-20 {width: 20%; display: inline-block; vertical-align:top;}
@@ -139,6 +141,7 @@ menu, nav {text-align: right;}
 
 .col-100 {width: 100%; display: block;}
 .col-50 {width: 49%; display: inline-block; float: left; margin-right: 1%;}
+.col-75 {width: 72%; display: inline-block; float: left; margin-right: 1%;}
 .col-25 {width: 24%; display: inline-block; float: left; margin-right: 1%;}
 .col-last {margin-right: 0; float: right;}
 
