--- a/Purchasing.Mvc/Views/HistoryAjax/RecentComments.cshtml
+++ b/Purchasing.Mvc/Views/HistoryAjax/RecentComments.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Purchasing.Core.Queries.CommentHistory>
+﻿@model IList<Purchasing.Core.Queries.SearchResults.CommentResult>
 @if (Model.Count > 0)
 {
     <table>
@@ -17,7 +17,7 @@
             <tr>
                 <td class="order-details">@Html.ActionLink(item.RequestNumber, "Review", "Order", new { id = item.OrderId }, new { })
                 </td>
-                <td class="comment" rowspan="2">@item.Comment
+                <td class="comment" rowspan="2">@item.Text
                 </td>
             </tr>
             <tr>
