Oops, extra char

--- a/Purchasing.Mvc/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewLineItems.cshtml
@@ -35,7 +35,7 @@
                 @Html.ActionLink("Pay Invoice", "PayInvoice", new { id = Model.Order.Id}, new { @class = "button" })
                 if (Model.Order.OrderPaid)
                 {
-                    <i class="ui-icon ui-icon-check" title="All Items Paid">></i>
+                    <i class="ui-icon ui-icon-check" title="All Items Paid"></i>
                 }
             }
 
